<resources>
    <string name="app_name">byeruss</string>
    <string name="open_menu">메뉴 열기</string>
    <string name="my_meetings">나의 모임</string>
    <string name="make_meetings">모임 만들기</string>
    <string name="input1">방의 이름을 입력하세요</string>
    <string name="time">시간</string>
    <string name="input2">만날 시간을 입력하세요</string>
    <string name="input3">만날 장소를 입력하세요</string>
    <string name="place">장소</string>
    <string name="close">닫기</string>
    <string name="make_room">방 만들기</string>
    <string name="find_room">방 찾기</string>
    <string name="making">+</string>
    <string name="making2">+</string>
    <string name="sign_out">로그아웃</string>
    <string name="input_code">코드(방 아이디(ID))를 입력해 주세요</string>
    <string name="bye_russ">Bye-russ</string>
    <string name="input_room_id">방의 아이디를 입력하세요</string>
    <string name="roomName">모임 이름:</string>
    <string name="roomTime">모임 시간 :</string>
    <string name="roomPlace">모임 장소 :</string>
    <string name="edit_button_description">Edit Single room information</string>
    <string name="cross_image_content_description">Delete room from SQLite database</string>
    <string name="database_summary">Total Rooms: %1$d. Total Members: %2$d</string>
    <string name="back">메뉴로 돌아가기</string>
    <string name="insert_room_data">확인</string>
    <string name="byeruss_text">bye-russ</string>
    <string name="user_hello_text">님 안녕하세요?</string>
    <string name="meeting_make_btn">모임 만들기</string>
    <string name="meeting_find_btn">모임 찾기</string>
    <string name="my_meeting_btn">나의 모임</string>
</resources>